Fix column spacing on home table

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -47,12 +47,15 @@ iframe {
 .home-table {
   margin: 0 auto;
   width: 750px;
-  .row {
+  .col {
     margin-bottom: 25px;
   }
 }
 
 @media screen and (max-width: 750px) {
+  .main {
+    margin: 0 5px;
+  }
   .home-table {
     margin: 0 auto;
     width: 100%;
